lesson06 video02 time 10:30

--- a/lesson06/recursion.html
+++ b/lesson06/recursion.html
@@ -10,19 +10,8 @@
 
 <body>
     <h1>Рекурсия</h1>
-    <script>
-        function factorial(number) {
+    <script src="recursion.js">
 
-            if (number === 1) {
-                return 1;
-            }
-
-            const result = number * factorial(number - 1);
-            return result;
-
-        }
-
-        console.log(factorial(5));
     </script>
 </body>
 
