--- a/lesson07/index.html
+++ b/lesson07/index.html
@@ -41,10 +41,15 @@
             Пока вы смотрите видео, я клики считаю:
             <span class="count-button__counter">0</span>
         </button>
+        <button class="count-button" data-clicks="0">
+            Пока вы смотрите видео, я клики считаю:
+            <span class="count-button__counter">0</span>
+        </button>
     </main>
     <script>
-        const countButton = document.querySelector('.count-button');
-        countButton.onclick = function (event) {
+        const countButtons = document.querySelectorAll('.count-button');
+
+        const handlerCountButtonClick = (event) => {
 
             const targetButton = event.target;
 
@@ -57,6 +62,11 @@
 
             targetButton.dataset.clicks = clicks;
         }
+
+        countButtons.forEach(countButton => {
+            countButton.onclick = handlerCountButtonClick;
+        });
+
 
         const eventButton = document.querySelector('.event-button');
         eventButton.onclick = function (event) {
