lesson07 video06 time 03:05

--- a/lesson07/index.html
+++ b/lesson07/index.html
@@ -136,6 +136,8 @@
 
         clickTracker.oncontextmenu = function (event) {
 
+            event.preventDefault();
+
             console.log('oncontextmenu');
 
             console.log(event);
