lesson07 video09 time 06:00

--- a/lesson07/index.html
+++ b/lesson07/index.html
@@ -108,6 +108,11 @@
 
             const target = event.target;
             target.classList.add('draggable_drag');
+            document.body.appendChild(target);
+
+            target.style.top = event.pageY + 'px';
+
+            target.style.left = event.pageX + 'px';
         }
 
         draggables.forEach(draggable => {
