lesson07 video09 time 12:50

--- a/lesson07/index.html
+++ b/lesson07/index.html
@@ -98,7 +98,7 @@
             <input class="upload__control" type="file">Загрузить!
         </div>
         <div class="outer-square">
-            <div class="inner-square"></div>
+            <div class="inner-square draggable"></div>
         </div>
     </main>
     <script>
