lesson08 video01 time 02:20

--- a/lesson08/keyboard.html
+++ b/lesson08/keyboard.html
@@ -17,6 +17,15 @@
         const field = document.querySelector('.field');
 
         const fieldControl = document.querySelector('.field__control');
+        fieldControl.onkeydown = (event) => {
+
+            console.log('keydown');
+        }
+
+        fieldControl.onkeypress = (event) => {
+
+            console.log('keypress');
+        }
     </script>
 </body>
 
