lesson08 video01 time 06:05

--- a/lesson08/keyboard.html
+++ b/lesson08/keyboard.html
@@ -20,11 +20,13 @@
         fieldControl.onkeydown = (event) => {
 
             console.log('keydown');
+            console.log(event);
         }
 
         fieldControl.onkeypress = (event) => {
 
             console.log('keypress');
+            console.log(event);
         }
     </script>
 </body>
