lesson08 video01 time 08:35

--- a/lesson08/keyboard.html
+++ b/lesson08/keyboard.html
@@ -17,19 +17,21 @@
         const field = document.querySelector('.field');
 
         const fieldControl = document.querySelector('.field__control');
-        // fieldControl.onkeydown = (event) => {
-
-        // console.log('keydown');
-        // console.log(event);
-        // }
-
-        fieldControl.onkeypress = (event) => {
+        fieldControl.onkeydown = (event) => {
 
             event.preventDefault();
 
-            console.log('keypress');
+            console.log('keydown');
             console.log(event);
         }
+
+        // fieldControl.onkeypress = (event) => {
+
+            // event.preventDefault();
+
+            // console.log('keypress');
+            // console.log(event);
+        // }
     </script>
 </body>
 
