lesson08 video02 time 01:49

--- a/lesson08/keyboard.html
+++ b/lesson08/keyboard.html
@@ -22,34 +22,51 @@
     <script>
         const field = document.querySelector('.field');
         const fieldControl = document.querySelector('.field__control');
-        const savedValue = localStorage.getItem('phone');
-        if (savedValue) {
-            fieldControl.value = savedValue;
+        // const savedValue = localStorage.getItem('phone');
+
+        // if (savedValue) {
+        // fieldControl.value = savedValue;
+        // }
+
+        // const message = document.querySelector('.message');
+
+        // document.body.onkeydown = function (event) {
+
+        // if (!((event.keyCode === 83) && ((event.metakey === true) || (event.ctrlKey === true)))) {
+        // return;
+        // }
+
+        // event.preventDefault();
+        // localStorage.setItem('phone', fieldControl.value);
+        // console.log(event);
+        // message.classList.remove('message_hidden');
+        // }
+
+        // fieldControl.onkeypress = (event) => {
+
+        // if ((event.keyCode < 48) || (event.keyCode > 57)) {
+        // event.preventDefault();
+        // return;
+        // }
+
+        // }
+
+        fieldControl.onkeypress = function (event) {
+
+            console.log('keypress');
+            console.log(event.target.value);
         }
 
-        const message = document.querySelector('.message');
+        fieldControl.onkeydown = function (event) {
 
-        document.body.onkeydown = function (event) {
-
-            if (!((event.keyCode === 83) && ((event.metakey === true) || (event.ctrlKey === true)))) {
-                return;
-            }
-
-            event.preventDefault();
-
-            localStorage.setItem('phone', fieldControl.value);
-
-            console.log(event);
-
-            message.classList.remove('message_hidden');
+            console.log('keydown');
+            console.log(event.target.value);
         }
 
-        fieldControl.onkeypress = (event) => {
+        fieldControl.onkeyup = function (event) {
 
-            if ((event.keyCode < 48) || (event.keyCode > 57)) {
-                event.preventDefault();
-                return;
-            }
+            console.log('keyup');
+            console.log(event.target.value);
         }
     </script>
 </body>
