lesson08 video03 time 03:40

--- a/lesson08/forms-elements.html
+++ b/lesson08/forms-elements.html
@@ -7,10 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .message_hidden {
-            display: none;
-        }
-
         .field__suggest {
             display: inline-block;
             margin: 4px;
@@ -26,13 +22,8 @@
 
 <body>
     <div class="field">
-        <label for="phone">Телефон</label>
-        +<input id="phone" class="field__control phone">
-    </div>
-    <div class="message message_hidden">Номер сохранен</div>
-    <div class="field">
         <label for="category">Категория</label>
-        <input id="category" class=" field__control category">
+        <input id="category" class="field__control category">
         <div class="field__suggests">
             <div class="field__suggest" data-suggest="Программирование">Программирование</div>
             <div class="field__suggest" data-suggest="Приколы">Приколы</div>
@@ -78,35 +69,10 @@
         }
 
         const field = document.querySelector('.field');
-        const phone = document.querySelector('.phone');
-        const savedValue = localStorage.getItem('phone');
-        if (savedValue) {
-            phone.value = savedValue;
-        }
 
-        const message = document.querySelector('.message');
+        category.oninput = function () {
 
-        document.body.onkeydown = function (event) {
-
-            if (!((event.keyCode === 83) && ((event.metakey === true) || (event.ctrlKey === true)))) {
-                return;
-            }
-
-            event.preventDefault();
-
-            localStorage.setItem('phone', phone.value);
-
-            console.log(event);
-
-            message.classList.remove('message_hidden');
-        }
-
-        phone.onkeypress = (event) => {
-
-            if ((event.keyCode < 48) || (event.keyCode > 57)) {
-                event.preventDefault();
-                return;
-            }
+            console.log('input');
         }
     </script>
 </body>
