lesson08 video04 time 06:00

--- a/lesson08/forms-elements.html
+++ b/lesson08/forms-elements.html
@@ -42,6 +42,10 @@
             console.log('blur');
         }
 
+        category.onchange = function () {
+            console.log('change');
+        }
+
         const fieldSuggests = document.querySelectorAll('.field__suggest');
 
         function handleSuggestClick(event) {
