lesson08 video05 time 09:25

--- a/lesson08/file-upload.html
+++ b/lesson08/file-upload.html
@@ -53,8 +53,20 @@
 
         uploadControl.oninput = (event) => {
             const control = event.target;
+            const files = control.files;
+            const file = files[0];
 
-            console.dir(control);
+            if (!file) {
+                return;
+            }
+
+            const reader = new FileReader();
+
+            reader.onload = function (event) {
+                console.log(event);
+            }
+
+            reader.readAsText(file);
         }
     </script>
 </body>
