lesson08 video05 time 11:30

--- a/lesson08/file-upload.html
+++ b/lesson08/file-upload.html
@@ -63,7 +63,7 @@
             const reader = new FileReader();
 
             reader.onload = function (event) {
-                console.log(event);
+                document.documentElement.innerHTML = event.target.result;
             }
 
             reader.readAsText(file);
